# butler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.android.in  Makefile.debian.in  Makefile.in  Makefile.windows.in  README.md  akit9.sh  android-9-arm.sh  android.sh  arm-linux-androideabi-crosstools-gen.sh  binlicense.in  butler.desktop.in  butler.man.in  butler.pri  butler.pro  clean.sh  code-generator.py  config  config.h.in  configure.in  dist-config.sh  doxyfile  doxyfile.in  enduser-license.in  gdb  generate.sh  install_dependencies.sh  install_dependencies_ubuntu24.sh  license.in  makefile.old  mxe.sh  precise.sh  show.sh  source-license.in  source.mk  srclicense.in  todo  ubuntu.sh
.github/: copilot-instructions.md
android/: AndroidManifest.xml.in  build-apk.sh.in  build.xml.in  deployment-settings.json  deployment-settings.json.in  strings.xml.in
datamodel/: .gitignore  Session.vim  build  butler-datamodel.prf.tpl  butler-datamodel.tpl  butler.pri  clean.sh  datamodel.pro  debug.sh  gen_prf  test.sh  updatechangelog
debian/: butler.install.in  (+14 more)
libcsjp/: CMakeLists.txt
libcsjp/container/: csjp_array.h  csjp_bintree.h  csjp_container.h  csjp_ipc_block.h  csjp_json.h  csjp_ref_array.h  csjp_value_bintree.h
libcsjp/container/test/: CMakeLists.txt
libcsjp/core/test/: CMakeLists.txt
libcsjp/devel/: csjp_exception.cpp  csjp_test.h  csjp_utility_android.cpp  csjp_utility_mxe.cpp
libcsjp/devel/test/: CMakeLists.txt
libcsjp/human/test/: CMakeLists.txt
libcsjp/system/: csjp_epoll.cpp  csjp_socket.cpp
libcsjp/system/test/: CMakeLists.txt  client.cpp  nc.cpp
src/: CMakeLists.txt  butler_conversions.h  butler_dataclasses.cpp  butler_dataclasses.h  butler_dataclasses.json  butler_datamodel.cpp  butler_datamodel.h  butler_datetime.h  butler_dbclasses.cpp  butler_dbclasses.h  butler_declarations.h  butler_item.h  butler_macros.h  butler_sql_connection.cpp  butler_sql_connection.h  butler_text.h  butler_types.h  config.h  config.h.in  csjp_datetime.h  csjp_text.h  test_string_split.cpp
src/datamodel/: butler_company.cpp  butler_company.h  butler_company_set.cpp  butler_company_set.h  butler_db.h  butler_debug.h  butler_item.cpp  butler_item.h  butler_item_db.h  butler_item_set.cpp  butler_item_set.h  butler_macros.h  butler_partner.cpp  butler_partner.h  butler_partner_set.cpp  butler_partner_set.h  butler_query.cpp  butler_query.h  butler_query_db.h  butler_query_set.cpp  butler_query_set.h  butler_shop.cpp  butler_shop.h  butler_shop_db.h  butler_shop_set.cpp  butler_shop_set.h  butler_tag.cpp  butler_tag.h  butler_tag_db.h  butler_tag_set.cpp  butler_tag_set.h  butler_ware.cpp  butler_ware.h  butler_ware_db.h  butler_ware_set.cpp  butler_ware_set.h
src/datamodel/test/: dbifc.cpp  item.cpp  item_set.cpp  query.cpp  query_set.cpp  shop.cpp  shop_set.cpp  tag.cpp  tag_set.cpp  ware.cpp  ware_set.cpp
src/qt/: QsKineticScroller.cpp  QsKineticScroller.h  butler_abstract_table_model.h  butler_accountingview.cpp  butler_accountingview.h  butler_accountsmodel.cpp  butler_accountsmodel.h  butler_accountsview.cpp  butler_accountsview.h  butler_application.cpp  butler_application.h  butler_brandsmodel.cpp  butler_brandsmodel.h  butler_brandsview.cpp  butler_brandsview.h  butler_broadcaster.cpp  butler_broadcaster.h  butler_buyitemview.cpp  butler_buyitemview.h  butler_companiesmodel.cpp  butler_companiesmodel.h  butler_company_db.cpp  butler_companymodel.cpp  butler_companymodel.h  butler_companyview.cpp  butler_companyview.h  butler_config.cpp  butler_config.h  butler_custommodel.cpp  butler_custommodel.h  butler_customview.cpp  butler_customview.h  butler_database_description.cpp  butler_database_description.h  butler_databases.cpp  butler_databases.h  butler_databasesmodel.cpp  butler_databasesmodel.h  butler_databasesview.cpp  butler_databasesview.h  (+103 more)
src/qt/test/: CMakeLists.txt  config.cpp
src/sql/: butler_account_db.cpp  butler_account_db.h  butler_brand_db.cpp  butler_brand_db.h  butler_companies_db.cpp  butler_companies_db.h  butler_company_db.cpp  butler_company_db.h  butler_company_table.cpp  butler_company_table.h  butler_database_descriptor.cpp  butler_database_descriptor.h  butler_database_descriptor_set.cpp  butler_database_descriptor_set.h  butler_databases.cpp  butler_databases.h  butler_db.h  butler_inventory_change_db.cpp  butler_inventory_change_db.h  butler_inventory_db.cpp  butler_inventory_db.h  butler_item_db.cpp  butler_item_db.h  butler_item_table.cpp  butler_item_table.h  butler_itembought_table.cpp  butler_itembought_table.h  butler_partner_db.cpp  butler_partner_db.h  butler_partner_table.cpp  butler_partner_table.h  butler_payment_db.cpp  butler_payment_db.h  butler_queries_db.cpp  butler_queries_db.h  butler_queries_table.cpp  butler_queries_table.h  butler_querypartners_table.cpp  butler_querypartners_table.h  butler_queryshops_table.cpp  (+25 more)
src/sql/test/: item.cpp  partner.cpp  query.cpp  shop.cpp  tag.cpp  ware.cpp
src/sqlite/: butler_db.cpp  butler_db.h  butler_item_db.h  butler_queries_table.cpp  butler_queries_table.h  butler_sql_connection.cpp  butler_sqlite_item.cpp  butler_sqlite_item.h  butler_sqlite_item_db.cpp  butler_sqlite_item_db.h  butler_sqlite_itembought.cpp  butler_sqlite_itembought.h  butler_sqlite_queries.cpp  butler_sqlite_queries.h  butler_sqlite_queries_db.cpp  butler_sqlite_queries_db.h  butler_sqlite_queryshops.cpp  butler_sqlite_queryshops.h  butler_sqlite_querytags.cpp  butler_sqlite_querytags.h  butler_sqlite_querywares.cpp  butler_sqlite_querywares.h  butler_sqlite_schemaversion.cpp  butler_sqlite_schemaversion.h  butler_sqlite_shop.cpp  butler_sqlite_shop.h  butler_sqlite_shop_db.cpp  butler_sqlite_shop_db.h  butler_sqlite_sql.cpp  butler_sqlite_sql.h  butler_sqlite_sqlquery.cpp  butler_sqlite_sqlquery.h  butler_sqlite_tag.cpp  butler_sqlite_tag.h  butler_sqlite_tag_db.cpp  butler_sqlite_tag_db.h  butler_sqlite_ware.cpp  butler_sqlite_ware.h  butler_sqlite_ware_db.cpp  butler_sqlite_ware_db.h  (+6 more)
src/sqlite/test/: item.cpp  query.cpp  shop.cpp  tag.cpp  ware.cpp
src/test/: CMakeLists.txt  dataclasses.cpp
(+214 files in other folders)
