#!/bin/bash

source config

PKGNAME=@PKGNAME@

DEBUG=no

# param 1 : inflie
# param 2 : outfile
function generate ()
{
	cat $1 | sed \
		-e "s|@PREFIX@|${PREFIX}|g" \
		-e "s|@TCROOT@|${TCROOT}|g" \
		-e "s|@INCLUDES@|${INCLUDES}|g" \
		-e "s|@CFLAGS@|${CFLAGS}|g" \
		-e "s|@LDFLAGS@|${LDFLAGS}|g" \
		-e "s|@LIBS@|${LIBS}|g" \
		-e "s|@STATICS@|${STATICS}|g" \
		-e "s|@DEFINES@|${DEFINES}|g" \
		-e "s|@CXX@|${CXX}|g" \
		-e "s|@CC@|${CC}|g" \
		-e "s|@CPP@|${CPP}|g" \
		-e "s|@LD@|${LD}|g" \
		-e "s|@STRIP@|${STRIP}|g" \
		-e "s|@RANLIB@|${RANLIB}|g" \
		-e "s|@OBJCOPY@|${OBJCOPY}|g" \
		-e "s|@MOC@|${MOC}|g" \
		-e "s|@DOCDIR@|${DOCDIR}|g" \
		-e "s|@PKGCONFIG@|${PKGCONFIG}|g" \
		-e "s|@CONFIG@|${CONFIG}|g" \
		-e "s|@MANSECTION@|${MANSECTION}|g" \
		-e "s|@MANDIR@|${MANDIR}|g" \
		> $2 || exit $?
}

function configure ()
{
	while ! test "x$1" = "x"; do
		KEY=$(echo $1 | sed 's|=.*||g')
		VALUE=$(echo $1 | sed 's|.*=||g')

		case ${KEY} in
			(--build)
				! test "x${VALUE}" = "x" || {
					echo "Missing build architecture value."
					exit $?
				}
				BUILD_ARCH="${VALUE}"
			;;
			(--host)
				! test "x${VALUE}" = "x" || {
					echo "Missing host architecture value."
					exit $?
				}
				HOST_ARCH="${VALUE}"
			;;
			(--target)
				! test "x${VALUE}" = "x" || {
					echo "Missing target architecture value."
					exit $?
				}
				TARGET_ARCH="${VALUE}"
			;;
			(--prefix)
				PREFIX="${VALUE}"
			;;
			(--tcroot)
				TCROOT="${VALUE}"
			;;
			(--multicultural)
				LIBS="${LIBS} $(${PKGCONFIG} --libs icu-uc)"
				CONFIG="${CONFIG} multicultural"
				DEFINES="${DEFINES} -DSTLCOMPATIBLE"
				#LIBS+=-licuuc -licudata
			;;
			(--debug)
				CFLAGS="${CFLAGS} -fno-builtin -O0"
				DEFINES="${DEFINES} -DDEBUG"
				DEBUG=yes
			;;
			(--gnu-source)
				CFLAGS="${CFLAGS} -D_GNU_SOURCE"
			;;
			(--fpic)
				CFLAGS="${CFLAGS} -fPIC"
			;;
			(--static)
				CONFIG="${CONFIG} staticbuild"
			;;
			(--perfmode)
				DEFINES="${DEFINES} -DPERFMODE"
			;;
			(--stlcompatible)
				DEFINES="${DEFINES} -DSTLCOMPATIBLE"
			;;
			(--libs)
				LIBS="${LIBS} ${VALUE}"
			;;
			(--ldflags)
				LDFLAGS="${LDFLAGS} ${VALUE}"
			;;
			(--pkg-config-path)
				export PKG_CONFIG_PATH="${PKG_CONFIG_PATH}:${VALUE}"
			;;
			(*)
				echo "Invalid argument ($1) found on command line."
				exit 1
			;;
		esac
		shift
	done
}

configure --prefix=usr
configure @PRECONFIGURATION@
configure $@

! test ${DEBUG} = "no" || { CFLAGS="${CFLAGS} -O2" ; }

! test "x${HOST_ARCH}" = "x" || { HOST_ARCH=${BUILD_ARCH} ; }
! test "x${TARGET_ARCH}" = "x" || { TARGET_ARCH=${HOST_ARCH} ; }

test "x${TARGET_ARCH}" = "x${HOST_ARCH}" && {
	CXX=g++
	CC=cc
	CPP=cpp
	LD=ld
	STRIP=strip
	OBJCOPY=objcopy
	MOC=moc
	RANLIB=ranlib
	PKGCONFIG=pkg-config
} || {
	CXX=${TARGET_ARCH}-g++
	CC=${TARGET_ARCH}-cc
	CPP=${TARGET_ARCH}-cpp
	LD=${TARGET_ARCH}-ld
	STRIP=${TARGET_ARCH}-strip
	OBJCOPY=${TARGET_ARCH}-objcopy
	MOC=${TARGET_ARCH}-moc
	RANLIB=${TARGET_ARCH}-ranlib
	PKGCONFIG=${TARGET_ARCH}-pkg-config
}

#CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags QtCore)"
CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags QtSql)"
CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags QtGui)"
CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags libcsjp0.4)"
echo "${CONFIG}" | grep staticbuild > /dev/null && {
	LDFLAGS="${LDFLAGS} -static-libgcc -static-libstdc++"
#	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs QtCore)"
	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs QtSql)"
	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs QtGui)"
	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs libcsjp0.4)"
} || {
#	LIBS+="${LIBS} $(${PKGCONFIG} --libs QtCore)"
	LIBS+="${LIBS} $(${PKGCONFIG} --libs QtSql)"
	LIBS+="${LIBS} $(${PKGCONFIG} --libs QtGui)"
	LIBS+="${LIBS} $(${PKGCONFIG} --libs libcsjp0.4)"
}

TCROOT="${TCROOT}"

LDFLAGS="${LDFLAGS} -Wl,--as-needed"
STATICS="${STATICS}"

CFLAGS="${CFLAGS} -Werror -Wall -Wextra -g -MMD -std=c++0x -D_ISOC99_SOURCE"

# Adjusting PREFIX and TCROOT if non-empty
test "x${PREFIX}" = "x" || { PREFIX="${PREFIX}/" ; }
test "x${TCROOT}" = "x" || { TCROOT="${TCROOT}/" ; }

DOCDIR=${TCROOT}${PREFIX}/share/doc/${PKGNAME}

APPSDIR=${TCROOT}${PREFIX}share/applications
MANSECTION=1
MANDIR=${TCROOT}${PREFIX}share/man/man${MANSECTION}

generate Makefile.in Makefile || exit $?
generate doxyfile.in doxyfile || exit $?
generate debian/${PKGNAME}.install.in debian/${PKGNAME}.install || exit $?
generate debian/${PKGNAME}-dbg.install.in debian/${PKGNAME}-dbg.install || exit $?
generate config.h.in src/config.h || exit $?

test -d ${APPSDIR} || { mkdir -p ${APPSDIR} || exit $? ; }
generate butler.desktop.in ${APPSDIR}/${PKGNAME}.desktop || exit $?

test -d ${MANDIR} || { mkdir -p ${MANDIR} || exit $? ; }
generate butler.man.in ${MANDIR}/${PKGNAME}.${MANSECTION} || exit $?

