#!/bin/bash

source config

PKGNAME=@PKGNAME@

DEBUG=no

# param 1 : inflie
# param 2 : outfile
function generate ()
{
	cat $1 | sed \
		-e "s|@PREFIX@|${PREFIX}|g" \
		-e "s|@TCROOT@|${TCROOT}|g" \
		-e "s|@INCLUDES@|${INCLUDES}|g" \
		-e "s|@CFLAGS@|${CFLAGS}|g" \
		-e "s|@LDFLAGS@|${LDFLAGS}|g" \
		-e "s|@LIBS@|${LIBS}|g" \
		-e "s|@STATICS@|${STATICS}|g" \
		-e "s|@DEFINES@|${DEFINES}|g" \
		-e "s|@CXX@|${CXX}|g" \
		-e "s|@CC@|${CC}|g" \
		-e "s|@CPP@|${CPP}|g" \
		-e "s|@LD@|${LD}|g" \
		-e "s|@STRIP@|${STRIP}|g" \
		-e "s|@RANLIB@|${RANLIB}|g" \
		-e "s|@OBJCOPY@|${OBJCOPY}|g" \
		-e "s|@MOC@|${MOC}|g" \
		-e "s|@DOCDIR@|${DOCDIR}|g" \
		-e "s|@PKGCONFIG@|${PKGCONFIG}|g" \
		-e "s|@CONFIG@|${CONFIG}|g" \
		-e "s|@MAN_DIR@|${MAN_DIR}|g" \
		> $2 || exit $?
}

function process_args ()
{
	while ! test "x$1" = "x"; do
		KEY=$(echo $1 | sed 's|=.*||g')
		VALUE=$(echo $1 | sed 's|.*=||g')

		case ${KEY} in
			(--build)
				! test "x${VALUE}" = "x" || {
					echo "Missing build architecture value."
					exit $?
				}
				BUILD_ARCH="${VALUE}"
			;;
			(--host)
				! test "x${VALUE}" = "x" || {
					echo "Missing host architecture value."
					exit $?
				}
				HOST_ARCH="${VALUE}"
			;;
			(--target)
				! test "x${VALUE}" = "x" || {
					echo "Missing target architecture value."
					exit $?
				}
				TARGET_ARCH="${VALUE}"
			;;
			(--prefix)
				PREFIX=$(echo ${VALUE} | sed 's|^/*||g')
				prefix=$PREFIX # dh_auto_configure compatibility
			;;
			(--tcroot)
				TCROOT="${VALUE}"
			;;
			(--debug)
				CFLAGS="${CFLAGS} -fno-builtin -O0"
				DEFINES="${DEFINES} -DDEBUG"
				DEBUG=yes
			;;
			(--gnu-source)
				CFLAGS="${CFLAGS} -D_GNU_SOURCE"
			;;
			(--fpic)
				CFLAGS="${CFLAGS} -fPIC"
			;;
			(--static)
				CONFIG="${CONFIG} staticbuild"
			;;
			(--perfmode)
				DEFINES="${DEFINES} -DPERFMODE"
			;;
			(--stlcompatible)
				DEFINES="${DEFINES} -DSTLCOMPATIBLE"
			;;
			(--libs)
				LIBS="${LIBS} ${VALUE}"
			;;
			(--ldflags)
				LDFLAGS="${LDFLAGS} ${VALUE}"
			;;
			(--pkg-config-path)
				export PKG_CONFIG_PATH="${PKG_CONFIG_PATH}:${VALUE}"
			;;
			(--includedir)
			        INCLUDE_DIR=$(eval echo ${VALUE} | sed 's|^/*||g')
			;;
			(--mandir)
			        MAN_DIR=$(eval echo ${VALUE} | sed 's|^/*||g')
			;;
			(--infodir)
			        INFO_DIR=$(eval echo ${VALUE} | sed 's|^/*||g')
			;;
			(--sysconfdir)
			        SYSCONF_DIR=$(eval echo ${VALUE} | sed 's|^/*||g')
			;;
			(--localstatedir)
			        LOCALSTATE_DIR=$(eval echo ${VALUE} | sed 's|^/*||g')
			;;
			(--libexecdir)
			        LIBEXEC_DIR=$(eval echo ${VALUE} | sed 's|^/*||g')
			;;
			# Some option we want to accept but do nothing for them
			(--disable-maintainer-mode)
			;;
			(--disable-dependency-tracking)
			;;
			(*)
				echo "Invalid argument ($1) found on command line."
				exit 1
			;;
		esac
		shift
	done
}

process_args --prefix=usr
process_args @PRECONFIGURATION@
process_args $@

! test ${DEBUG} = "no" || { CFLAGS="${CFLAGS} -O2" ; }

! test "x${HOST_ARCH}" = "x" || { HOST_ARCH=${BUILD_ARCH} ; }
! test "x${TARGET_ARCH}" = "x" || { TARGET_ARCH=${HOST_ARCH} ; }

test "x${TARGET_ARCH}" = "x${HOST_ARCH}" && {
	CXX=g++
	CC=cc
	CPP=cpp
	LD=ld
	STRIP=strip
	OBJCOPY=objcopy
	MOC=moc
	RANLIB=ranlib
	PKGCONFIG=pkg-config
} || {
	CXX=${TARGET_ARCH}-g++
	CC=${TARGET_ARCH}-cc
	CPP=${TARGET_ARCH}-cpp
	LD=${TARGET_ARCH}-ld
	STRIP=${TARGET_ARCH}-strip
	OBJCOPY=${TARGET_ARCH}-objcopy
	MOC=${TARGET_ARCH}-moc
	RANLIB=${TARGET_ARCH}-ranlib
	PKGCONFIG=${TARGET_ARCH}-pkg-config
}

#CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags QtCore)"
CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags QtSql)"
CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags QtGui)"
CFLAGS="${CFLAGS} $(${PKGCONFIG} --cflags libcsjp0.1)"
echo "${CONFIG}" | grep staticbuild > /dev/null && {
	LDFLAGS="${LDFLAGS} -static-libgcc -static-libstdc++"
#	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs QtCore)"
	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs QtSql)"
	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs QtGui)"
	STATICS+="${STATICS} $(${PKGCONFIG} --static --libs libcsjp0.1)"
} || {
#	LIBS+="${LIBS} $(${PKGCONFIG} --libs QtCore)"
	LIBS+="${LIBS} $(${PKGCONFIG} --libs QtSql)"
	LIBS+="${LIBS} $(${PKGCONFIG} --libs QtGui)"
	LIBS+="${LIBS} $(${PKGCONFIG} --libs libcsjp0.1)"
}

TCROOT="${TCROOT}"

LDFLAGS="${LDFLAGS} -Wl,--as-needed"
STATICS="${STATICS}"

INCLUDES=-Isrc

CFLAGS="${CFLAGS} -Werror -Wall -Wextra -g -MMD -std=c++0x -D_ISOC99_SOURCE"

# Adjusting PREFIX and TCROOT if non-empty
test "x${PREFIX}" = "x" || { PREFIX="${PREFIX}/" ; }
test "x${TCROOT}" = "x" || { TCROOT="${TCROOT}/" ; }

test "x${INCLUDE_DIR}" = "x" && { INCLUDE_DIR=${TCROOT}${PREFIX}include ; }
test "x${MAN_DIR}" = "x" && { MAN_DIR=${TCROOT}${PREFIX}share/man ; }
test "x${INFO_DIR}" = "x" && { INFO_DIR=${TCROOT}${PREFIX}share/info ; }
test "x${SYSCONF_DIR}" = "x" && { SYSCONF_DIR=${TCROOT}etc ; }
test "x${LOCALSTATE_DIR}" = "x" && { LOCALSTATE_DIR=${TCROOT}var ; }
test "x${LIBEXEC_DIR}" = "x" && { LIBEXEC_DIR=${TCROOT}${PREFIX}lib ; }

DOCDIR=${TCROOT}${PREFIX}share/doc/${PKGNAME}

APPSDIR=${TCROOT}${PREFIX}share/applications

generate Makefile.in Makefile || exit $?
generate doxyfile.in doxyfile || exit $?
generate debian/${PKGNAME}.install.in debian/${PKGNAME}.install || exit $?
generate debian/${PKGNAME}-dbg.install.in debian/${PKGNAME}-dbg.install || exit $?
generate config.h.in src/config.h || exit $?

test -d ${APPSDIR} || { mkdir -p ${APPSDIR} || exit $? ; }
generate butler.desktop.in ${APPSDIR}/${PKGNAME}.desktop || exit $?

test -d ${MAN_DIR}/man1 || { mkdir -p ${MAN_DIR}/man1 || exit $? ; }
generate butler.man.in ${MAN_DIR}/man1/${PKGNAME}.1 || exit $?

